Localized the job cart, fix file name bug

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -550,5 +550,45 @@
   "tomorrow": "Morgen",
   "inDays": "In {count} Tagen",
   "monthDay": "{month, select, 1{Jan} 2{Feb} 3{Mär} 4{Apr} 5{Mai} 6{Jun} 7{Jul} 8{Aug} 9{Sep} 10{Okt} 11{Nov} 12{Dez} other{}} {day}",
-  "invalidDate": "Ungültiges Datum"
+  "invalidDate": "Ungültiges Datum",
+
+  "jobCartTabLiked": "Gefällt mir",
+  "jobCartTabToApply": "Bewerben",
+  "jobCartTabApplied": "Beworben",
+  "jobCartYourJobCart": "Ihr Job-Warenkorb",
+  "jobCartRefresh": "Aktualisieren",
+  "jobCartLoadingJobCart": "Job-Warenkorb wird geladen...",
+  "jobCartPotentialOpportunities": "potenzielle Möglichkeiten",
+  "jobCartApplicationsRemaining": "verbleibende Bewerbungen",
+  "jobCartApplicationsCompleted": "abgeschlossene Bewerbungen",
+  "jobCartPotentialOpportunity": "potenzielle Möglichkeit",
+  "jobCartApplicationRemaining": "verbleibende Bewerbung",
+  "jobCartApplicationCompleted": "abgeschlossene Bewerbung",
+  "jobCartNoLikedJobs": "Sie haben noch keine Jobs geliked",
+  "jobCartNoApplicationsToComplete": "Keine Bewerbungen zu vervollständigen",
+  "jobCartNoCompletedApplications": "Sie haben noch keine Bewerbungen abgeschlossen",
+  "jobCartNoJobsFound": "Keine Jobs gefunden",
+  "jobCartStartBrowsing": "Beginnen Sie mit dem Durchsuchen von Jobs, um Ihre Sammlung aufzubauen",
+  "jobCartMoveJobsToStage": "Verschieben Sie Jobs in diese Phase, um sie hier zu sehen",
+  "jobCartRemoveJob": "Job entfernen",
+  "jobCartRemoveJobConfirm": "Sind Sie sicher, dass Sie diesen Job aus Ihrer Liste entfernen möchten?",
+  "jobCartCancel": "Abbrechen",
+  "jobCartRemove": "Entfernen",
+  "jobCartJobRemoved": "{jobName} entfernt",
+  "jobCartUndo": "RÜCKGÄNGIG",
+  "jobCartViewDetails": "Details anzeigen",
+  "jobCartMoveBack": "Zurück bewegen",
+  "jobCartMoveForward": "Vorwärts bewegen",
+  "jobCartHowItWorksTitle": "Wie Ihr Job-Warenkorb funktioniert",
+  "jobCartHowItWorksMinimized": "Tippen Sie, um zu erfahren, wie Ihr Job-Warenkorb funktioniert",
+  "jobCartHowItWorksDescription": "Ihr Job-Warenkorb hilft Ihnen bei der Organisation Ihrer Jobsuche:",
+  "jobCartHowItWorksLikedTitle": "Potenzielle Möglichkeiten",
+  "jobCartHowItWorksLikedDesc": "Jobs, die Ihnen gefallen und die Sie weiter erkunden möchten",
+  "jobCartHowItWorksToApplyTitle": "Verbleibende Bewerbungen",
+  "jobCartHowItWorksToApplyDesc": "Jobs, für die Sie bereit sind, sich zu bewerben",
+  "jobCartHowItWorksAppliedTitle": "Abgeschlossene Bewerbungen",
+  "jobCartHowItWorksAppliedDesc": "Jobs, für die Sie sich bereits beworben haben",
+  "jobCartHowItWorksTip": "Wischen Sie nach links auf jeden Job, um ihn aus Ihrem Warenkorb zu entfernen",
+  "jobCartExpand": "Erweitern",
+  "jobCartMinimize": "Minimieren"
 }
