--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -549,5 +549,45 @@
   "tomorrow": "Mañana",
   "inDays": "En {count} días",
   "monthDay": "{month, select, 1{Ene} 2{Feb} 3{Mar} 4{Abr} 5{May} 6{Jun} 7{Jul} 8{Ago} 9{Sep} 10{Oct} 11{Nov} 12{Dic} other{}} {day}",
-  "invalidDate": "Fecha inválida"
+  "invalidDate": "Fecha inválida",
+
+  "jobCartTabLiked": "Me gusta",
+  "jobCartTabToApply": "Por aplicar",
+  "jobCartTabApplied": "Aplicados",
+  "jobCartYourJobCart": "Tu carrito de trabajos",
+  "jobCartRefresh": "Actualizar",
+  "jobCartLoadingJobCart": "Cargando tu carrito de trabajos...",
+  "jobCartPotentialOpportunities": "oportunidades potenciales",
+  "jobCartApplicationsRemaining": "aplicaciones restantes",
+  "jobCartApplicationsCompleted": "aplicaciones completadas",
+  "jobCartPotentialOpportunity": "oportunidad potencial",
+  "jobCartApplicationRemaining": "aplicación restante",
+  "jobCartApplicationCompleted": "aplicación completada",
+  "jobCartNoLikedJobs": "Aún no has marcado ningún trabajo como favorito",
+  "jobCartNoApplicationsToComplete": "No hay aplicaciones por completar",
+  "jobCartNoCompletedApplications": "No has completado ninguna aplicación",
+  "jobCartNoJobsFound": "No se encontraron trabajos",
+  "jobCartStartBrowsing": "Comienza a navegar por trabajos para construir tu colección",
+  "jobCartMoveJobsToStage": "Mueve trabajos a esta etapa para verlos aquí",
+  "jobCartRemoveJob": "Eliminar trabajo",
+  "jobCartRemoveJobConfirm": "¿Estás seguro de que quieres eliminar este trabajo de tu lista?",
+  "jobCartCancel": "Cancelar",
+  "jobCartRemove": "Eliminar",
+  "jobCartJobRemoved": "{jobName} eliminado",
+  "jobCartUndo": "DESHACER",
+  "jobCartViewDetails": "Ver detalles",
+  "jobCartMoveBack": "Mover atrás",
+  "jobCartMoveForward": "Mover adelante",
+  "jobCartHowItWorksTitle": "Cómo funciona tu carrito de trabajos",
+  "jobCartHowItWorksMinimized": "Toca para aprender cómo funciona tu carrito de trabajos",
+  "jobCartHowItWorksDescription": "Tu carrito de trabajos te ayuda a organizar tu búsqueda de empleo:",
+  "jobCartHowItWorksLikedTitle": "Oportunidades potenciales",
+  "jobCartHowItWorksLikedDesc": "Trabajos que te han gustado y quieres explorar más",
+  "jobCartHowItWorksToApplyTitle": "Aplicaciones restantes",
+  "jobCartHowItWorksToApplyDesc": "Trabajos para los que estás listo para aplicar",
+  "jobCartHowItWorksAppliedTitle": "Aplicaciones completadas",
+  "jobCartHowItWorksAppliedDesc": "Trabajos para los que ya has aplicado",
+  "jobCartHowItWorksTip": "Desliza hacia la izquierda en cualquier trabajo para eliminarlo de tu carrito",
+  "jobCartExpand": "Expandir",
+  "jobCartMinimize": "Minimizar"
 }
