--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -550,5 +550,45 @@
   "tomorrow": "Demain",
   "inDays": "Dans {count} jours",
   "monthDay": "{month, select, 1{Jan} 2{Fév} 3{Mar} 4{Avr} 5{Mai} 6{Jun} 7{Jul} 8{Aoû} 9{Sep} 10{Oct} 11{Nov} 12{Déc} other{}} {day}",
-  "invalidDate": "Date invalide"
+  "invalidDate": "Date invalide",
+
+  "jobCartTabLiked": "Aimés",
+  "jobCartTabToApply": "À postuler",
+  "jobCartTabApplied": "Postulés",
+  "jobCartYourJobCart": "Votre panier d'emplois",
+  "jobCartRefresh": "Actualiser",
+  "jobCartLoadingJobCart": "Chargement de votre panier d'emplois...",
+  "jobCartPotentialOpportunities": "opportunités potentielles",
+  "jobCartApplicationsRemaining": "candidatures restantes",
+  "jobCartApplicationsCompleted": "candidatures complétées",
+  "jobCartPotentialOpportunity": "opportunité potentielle",
+  "jobCartApplicationRemaining": "candidature restante",
+  "jobCartApplicationCompleted": "candidature complétée",
+  "jobCartNoLikedJobs": "Vous n'avez encore aimé aucun emploi",
+  "jobCartNoApplicationsToComplete": "Aucune candidature à compléter",
+  "jobCartNoCompletedApplications": "Vous n'avez complété aucune candidature",
+  "jobCartNoJobsFound": "Aucun emploi trouvé",
+  "jobCartStartBrowsing": "Commencez à parcourir les emplois pour construire votre collection",
+  "jobCartMoveJobsToStage": "Déplacez les emplois vers cette étape pour les voir ici",
+  "jobCartRemoveJob": "Supprimer l'emploi",
+  "jobCartRemoveJobConfirm": "Êtes-vous sûr de vouloir supprimer cet emploi de votre liste ?",
+  "jobCartCancel": "Annuler",
+  "jobCartRemove": "Supprimer",
+  "jobCartJobRemoved": "{jobName} supprimé",
+  "jobCartUndo": "ANNULER",
+  "jobCartViewDetails": "Voir les détails",
+  "jobCartMoveBack": "Revenir en arrière",
+  "jobCartMoveForward": "Avancer",
+  "jobCartHowItWorksTitle": "Comment fonctionne votre panier d'emplois",
+  "jobCartHowItWorksMinimized": "Touchez pour apprendre comment fonctionne votre panier d'emplois",
+  "jobCartHowItWorksDescription": "Votre panier d'emplois vous aide à organiser votre recherche d'emploi :",
+  "jobCartHowItWorksLikedTitle": "Opportunités potentielles",
+  "jobCartHowItWorksLikedDesc": "Emplois que vous avez aimés et souhaitez explorer davantage",
+  "jobCartHowItWorksToApplyTitle": "Candidatures restantes",
+  "jobCartHowItWorksToApplyDesc": "Emplois pour lesquels vous êtes prêt à postuler",
+  "jobCartHowItWorksAppliedTitle": "Candidatures complétées",
+  "jobCartHowItWorksAppliedDesc": "Emplois pour lesquels vous avez déjà postulé",
+  "jobCartHowItWorksTip": "Glissez vers la gauche sur n'importe quel emploi pour le supprimer de votre panier",
+  "jobCartExpand": "Développer",
+  "jobCartMinimize": "Réduire"
 }
