--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -549,5 +549,45 @@
   "tomorrow": "Domani",
   "inDays": "Tra {count} giorni",
   "monthDay": "{month, select, 1{Gen} 2{Feb} 3{Mar} 4{Apr} 5{Mag} 6{Giu} 7{Lug} 8{Ago} 9{Set} 10{Ott} 11{Nov} 12{Dic} other{}} {day}",
-  "invalidDate": "Data non valida"
+  "invalidDate": "Data non valida",
+
+  "jobCartTabLiked": "Piaciuti",
+  "jobCartTabToApply": "Da candidare",
+  "jobCartTabApplied": "Candidati",
+  "jobCartYourJobCart": "Il tuo carrello lavori",
+  "jobCartRefresh": "Aggiorna",
+  "jobCartLoadingJobCart": "Caricamento del tuo carrello lavori...",
+  "jobCartPotentialOpportunities": "opportunità potenziali",
+  "jobCartApplicationsRemaining": "candidature rimanenti",
+  "jobCartApplicationsCompleted": "candidature completate",
+  "jobCartPotentialOpportunity": "opportunità potenziale",
+  "jobCartApplicationRemaining": "candidatura rimanente",
+  "jobCartApplicationCompleted": "candidatura completata",
+  "jobCartNoLikedJobs": "Non hai ancora messo mi piace a nessun lavoro",
+  "jobCartNoApplicationsToComplete": "Nessuna candidatura da completare",
+  "jobCartNoCompletedApplications": "Non hai completato nessuna candidatura",
+  "jobCartNoJobsFound": "Nessun lavoro trovato",
+  "jobCartStartBrowsing": "Inizia a sfogliare i lavori per costruire la tua collezione",
+  "jobCartMoveJobsToStage": "Sposta i lavori in questa fase per vederli qui",
+  "jobCartRemoveJob": "Rimuovi lavoro",
+  "jobCartRemoveJobConfirm": "Sei sicuro di voler rimuovere questo lavoro dalla tua lista?",
+  "jobCartCancel": "Annulla",
+  "jobCartRemove": "Rimuovi",
+  "jobCartJobRemoved": "{jobName} rimosso",
+  "jobCartUndo": "ANNULLA",
+  "jobCartViewDetails": "Visualizza dettagli",
+  "jobCartMoveBack": "Sposta indietro",
+  "jobCartMoveForward": "Sposta avanti",
+  "jobCartHowItWorksTitle": "Come funziona il tuo carrello lavori",
+  "jobCartHowItWorksMinimized": "Tocca per imparare come funziona il tuo carrello lavori",
+  "jobCartHowItWorksDescription": "Il tuo carrello lavori ti aiuta a organizzare la tua ricerca di lavoro:",
+  "jobCartHowItWorksLikedTitle": "Opportunità potenziali",
+  "jobCartHowItWorksLikedDesc": "Lavori che ti sono piaciuti e vuoi esplorare di più",
+  "jobCartHowItWorksToApplyTitle": "Candidature rimanenti",
+  "jobCartHowItWorksToApplyDesc": "Lavori per cui sei pronto a candidarti",
+  "jobCartHowItWorksAppliedTitle": "Candidature completate",
+  "jobCartHowItWorksAppliedDesc": "Lavori per cui hai già fatto domanda",
+  "jobCartHowItWorksTip": "Scorri verso sinistra su qualsiasi lavoro per rimuoverlo dal tuo carrello",
+  "jobCartExpand": "Espandi",
+  "jobCartMinimize": "Minimizza"
 }
