--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -549,5 +549,45 @@
   "tomorrow": "Morgen",
   "inDays": "Over {count} dagen",
   "monthDay": "{month, select, 1{Jan} 2{Feb} 3{Maa} 4{Apr} 5{Mei} 6{Jun} 7{Jul} 8{Aug} 9{Sep} 10{Okt} 11{Nov} 12{Dec} other{}} {day}",
-  "invalidDate": "Ongeldige datum"
+  "invalidDate": "Ongeldige datum",
+
+  "jobCartTabLiked": "Geliked",
+  "jobCartTabToApply": "Solliciteren",
+  "jobCartTabApplied": "Gesolliciteerd",
+  "jobCartYourJobCart": "Uw banen winkelwagen",
+  "jobCartRefresh": "Vernieuwen",
+  "jobCartLoadingJobCart": "Uw banen winkelwagen laden...",
+  "jobCartPotentialOpportunities": "potentiële kansen",
+  "jobCartApplicationsRemaining": "resterende sollicitaties",
+  "jobCartApplicationsCompleted": "voltooide sollicitaties",
+  "jobCartPotentialOpportunity": "potentiële kans",
+  "jobCartApplicationRemaining": "resterende sollicitatie",
+  "jobCartApplicationCompleted": "voltooide sollicitatie",
+  "jobCartNoLikedJobs": "U heeft nog geen banen geliked",
+  "jobCartNoApplicationsToComplete": "Geen sollicitaties om te voltooien",
+  "jobCartNoCompletedApplications": "U heeft nog geen sollicitaties voltooid",
+  "jobCartNoJobsFound": "Geen banen gevonden",
+  "jobCartStartBrowsing": "Begin met bladeren door banen om uw collectie op te bouwen",
+  "jobCartMoveJobsToStage": "Verplaats banen naar deze fase om ze hier te zien",
+  "jobCartRemoveJob": "Baan verwijderen",
+  "jobCartRemoveJobConfirm": "Weet u zeker dat u deze baan uit uw lijst wilt verwijderen?",
+  "jobCartCancel": "Annuleren",
+  "jobCartRemove": "Verwijderen",
+  "jobCartJobRemoved": "{jobName} verwijderd",
+  "jobCartUndo": "ONGEDAAN MAKEN",
+  "jobCartViewDetails": "Details bekijken",
+  "jobCartMoveBack": "Terug verplaatsen",
+  "jobCartMoveForward": "Vooruit verplaatsen",
+  "jobCartHowItWorksTitle": "Hoe uw banen winkelwagen werkt",
+  "jobCartHowItWorksMinimized": "Tik om te leren hoe uw banen winkelwagen werkt",
+  "jobCartHowItWorksDescription": "Uw banen winkelwagen helpt u bij het organiseren van uw baan zoektocht:",
+  "jobCartHowItWorksLikedTitle": "Potentiële kansen",
+  "jobCartHowItWorksLikedDesc": "Banen die u heeft geliked en verder wilt verkennen",
+  "jobCartHowItWorksToApplyTitle": "Resterende sollicitaties",
+  "jobCartHowItWorksToApplyDesc": "Banen waarvoor u klaar bent om te solliciteren",
+  "jobCartHowItWorksAppliedTitle": "Voltooide sollicitaties",
+  "jobCartHowItWorksAppliedDesc": "Banen waarvoor u al heeft gesolliciteerd",
+  "jobCartHowItWorksTip": "Veeg naar links op elke baan om deze uit uw winkelwagen te verwijderen",
+  "jobCartExpand": "Uitbreiden",
+  "jobCartMinimize": "Minimaliseren"
 }
