--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -550,5 +550,45 @@
   "tomorrow": "Mâine",
   "inDays": "În {count} zile",
   "monthDay": "{month, select, 1{Ian} 2{Feb} 3{Mar} 4{Apr} 5{Mai} 6{Iun} 7{Iul} 8{Aug} 9{Sep} 10{Oct} 11{Noi} 12{Dec} other{}} {day}",
-  "invalidDate": "Dată invalidă"
+  "invalidDate": "Dată invalidă",
+
+  "jobCartTabLiked": "Apreciate",
+  "jobCartTabToApply": "De aplicat",
+  "jobCartTabApplied": "Aplicate",
+  "jobCartYourJobCart": "Coșul tău de joburi",
+  "jobCartRefresh": "Reîmprospătează",
+  "jobCartLoadingJobCart": "Se încarcă coșul de joburi...",
+  "jobCartPotentialOpportunities": "oportunități potențiale",
+  "jobCartApplicationsRemaining": "aplicații rămase",
+  "jobCartApplicationsCompleted": "aplicații completate",
+  "jobCartPotentialOpportunity": "oportunitate potențială",
+  "jobCartApplicationRemaining": "aplicație rămasă",
+  "jobCartApplicationCompleted": "aplicație completată",
+  "jobCartNoLikedJobs": "Nu ai apreciat încă niciun job",
+  "jobCartNoApplicationsToComplete": "Nu ai aplicații de completat",
+  "jobCartNoCompletedApplications": "Nu ai completat încă nicio aplicație",
+  "jobCartNoJobsFound": "Nu s-au găsit joburi",
+  "jobCartStartBrowsing": "Începe să navighezi prin joburi pentru a-ți construi colecția",
+  "jobCartMoveJobsToStage": "Mută joburile în această etapă pentru a le vedea aici",
+  "jobCartRemoveJob": "Elimină jobul",
+  "jobCartRemoveJobConfirm": "Ești sigur că vrei să elimini acest job din lista ta?",
+  "jobCartCancel": "Anulează",
+  "jobCartRemove": "Elimină",
+  "jobCartJobRemoved": "{jobName} eliminat",
+  "jobCartUndo": "ANULEAZĂ",
+  "jobCartViewDetails": "Vezi detalii",
+  "jobCartMoveBack": "Mută înapoi",
+  "jobCartMoveForward": "Mută înainte",
+  "jobCartHowItWorksTitle": "Cum funcționează coșul tău de joburi",
+  "jobCartHowItWorksMinimized": "Atinge pentru a afla cum funcționează coșul de joburi",
+  "jobCartHowItWorksDescription": "Coșul de joburi te ajută să îți organizezi căutarea de locuri de muncă:",
+  "jobCartHowItWorksLikedTitle": "Oportunități potențiale",
+  "jobCartHowItWorksLikedDesc": "Joburi pe care le-ai apreciat și vrei să le explorezi mai mult",
+  "jobCartHowItWorksToApplyTitle": "Aplicații rămase",
+  "jobCartHowItWorksToApplyDesc": "Joburi pentru care ești gata să aplici",
+  "jobCartHowItWorksAppliedTitle": "Aplicații completate",
+  "jobCartHowItWorksAppliedDesc": "Joburi pentru care ai aplicat deja",
+  "jobCartHowItWorksTip": "Glisează spre stânga pe orice job pentru a-l elimina din coș",
+  "jobCartExpand": "Extinde",
+  "jobCartMinimize": "Minimizează"
 }
