--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -590,5 +590,24 @@
   "jobCartHowItWorksAppliedDesc": "Jobs, für die Sie sich bereits beworben haben",
   "jobCartHowItWorksTip": "Wischen Sie nach links auf jeden Job, um ihn aus Ihrem Warenkorb zu entfernen",
   "jobCartExpand": "Erweitern",
-  "jobCartMinimize": "Minimieren"
+  "jobCartMinimize": "Minimieren",
+
+  "internshipMessage": "Lass uns sicherstellen, dass du das Praktikum bekommst, das zu deinem Hintergrund passt.",
+
+  "choiceScreenTitle": "Aber wählen Sie zuerst die Option, die am besten zu Ihnen passt",
+  "choiceScreenFastAccess": "Schneller Zugang",
+  "choiceScreenFastAccessDesc": "1 Minute, 5 Fragen",
+  "choiceScreenHigherAccuracy": "Höhere Genauigkeit",
+  "choiceScreenHigherAccuracyDesc": "3-5 Minuten, 15 Fragen",
+
+  "upgradeToFullTitle": "Zum vollständigen Fragebogen wechseln",
+  "upgradeToFullContent": "Dies wechselt zum detaillierten Fragebogen für bessere Job-Zuordnung. Ihre aktuellen Antworten werden beibehalten.",
+  "upgradeSwitch": "Wechseln",
+  "questionNotAvailableInMode": "Diese Frage ist im {mode}-Modus nicht verfügbar.",
+  "noAnswersForMode": "Keine Antworten für {mode} anzuzeigen.",
+  "switchToSeeAllAnswers": "Wechseln Sie zu {mode}, um alle Antworten zu sehen.",
+  "showingAnswersFor": "{mode}-Antworten anzeigen",
+  "completeQuestions": "Fragen vervollständigen",
+
+  "shortQuestionnaireMode": "Schneller Fragebogen-Modus"
 }
